--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <p><b>2025 New Year Seminars:</b></p>
 
+<p><ul><b>Venue:</b> Zoom. Please ask Xinyu (alias Mr Li) for the link.</ul></p>
+
 <p>
   <ul>
     <b>李宣佑</b> Hypergeometric ℓ-adic sheaves for reductive groups (I)<br>
