--- a/index.html
+++ b/index.html
@@ -14,14 +14,28 @@
 
 <p>
   <ul>
-    <b>李宣佑</b> Hypergeometric ℓ-adic sheaves for reductive groups (I)<br>
+    <b>许福临</b> On the cone conjecture for certain pairs of dimension at most 4 (I)<br>
+    北京时间10:30--12:00, 2025年1月2日 (=18:30--20:00, 1.1.2025, PST)
+  </ul>
+</p>
+
+<p>
+  <ul>
+    <b>许福临</b> On the cone conjecture for certain pairs of dimension at most 4 (II)<br>
     北京时间10:30--12:00, 2025年1月3日 (=18:30--20:00, 1.2.2025, PST)
   </ul>
 </p>
 
 <p>
   <ul>
-    <b>李宣佑</b> Hypergeometric ℓ-adic sheaves for reductive groups (II)<br>
+    <b>李宣佑</b> Hypergeometric ℓ-adic sheaves for reductive groups (I)<br>
     北京时间10:30--12:00, 2025年1月4日 (=18:30--20:00, 1.3.2025, PST)
+  </ul>
+</p>
+
+<p>
+  <ul>
+    <b>李宣佑</b> Hypergeometric ℓ-adic sheaves for reductive groups (II)<br>
+    北京时间10:30--12:00, 2025年1月5日 (=18:30--20:00, 1.4.2025, PST)
   </ul>
 </p>
