--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <H2>Adolescent Seminar</H2>
 
 <p align="center"><i>
-  I offer you the loneliness, the darkness, the hunger of my heart;<br>
-  I am trying to bribe you with uncertainty, with danger, with defeat.
+  All my little plans and schemes<br>
+  Lost like some forgotten dreams
 </i></p>
 
 <p><b>2025 New Year Seminars:</b></p>
