--- a/index.html
+++ b/index.html
@@ -39,3 +39,10 @@
     北京时间10:30--12:00, 2025年1月5日 (=18:30--20:00, 1.4.2025, PST)
   </ul>
 </p>
+
+<p>
+  <ul>
+    <b>石泉</b> Variation of Archimedean Zeta Function and N/D-Conjecture for Generic Multiplicities<br>
+    北京时间10:30--12:00, 2025年1月6日 (=18:30--20:00, 1.5.2025, PST)
+  </ul>
+</p>
