--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 
 <p>
   <ul>
+    <b>王进一</b> A crash course on topos theory from a logical perspective (I)<br>
+    北京时间10:30--12:00, 2024年12月30日 (=18:30--20:00, 12.29.2024, PST)
+  </ul>
+</p>
+
+<p>
+  <ul>
     <b>许福临</b> On the cone conjecture for certain pairs of dimension at most 4 (I)<br>
     北京时间10:30--12:00, 2025年1月2日 (=18:30--20:00, 1.1.2025, PST)
   </ul>
