--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <p>
   <ul>
-    <b>王进一</b> A crash course on topos theory from a logical perspective (I)<br>
+    <b>王进一</b> A crash course on topos theory from a logical perspective<br>
     北京时间10:30--12:00, 2024年12月30日 (=18:30--20:00, 12.29.2024, PST)
   </ul>
 </p>
