--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 
 <p>
   <ul>
+    <b>余泽恺</b> On holographic duals of certain isolated weighted Gorenstein cDV singularities<br>
+    北京时间10:30--12:00, 2024年12月22日 (=18:30--20:00, 12.21.2024, PST)
+  </ul>
+</p>
+
+<p>
+  <ul>
     <b>王进一</b> A crash course on topos theory from a logical perspective<br>
     北京时间10:30--12:00, 2024年12月30日 (=18:30--20:00, 12.29.2024, PST)
   </ul>
