--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <head>
   <title>Adolescent Seminar</title>
+  <head>
+<style>
+body {
+  font-family: 'American Typewriter', serif;
+}
+</style>
 </head>
 <H2>Adolescent Seminar</H2>
 
